# Proyecto-Estructura-de-Datos

./: .gitignore
Proyecto/: main.cpp
borrador/: main.cpp
proyecto/: CMakeLists.txt  Ephemerality.cpp  Ephemerality.h  People.cpp  People.h  Place.cpp  Place.h  Rain.cpp  Rain.h  Region.cpp  Region.h  TimeRegis.cpp  TimeRegis.h  main.cpp  proyecto.cbp  proyecto.cscope_file_list  proyecto.depend  proyecto.layout
proyecto/include/: Ephemerality.h  People.h  Rain.h
proyecto/proyecto/: Ephemerality.cpp  Ephemerality.h  People.h  Place.cpp  Rain.cpp  Region.cpp  Region.h  TimeRegis.cpp  main.cpp  proyecto.depend  proyecto.layout
proyecto/src/: Ephemerality.cpp  People.cpp  Rain.cpp
